--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,12 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.7.0</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>5.3.12</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
